feat: add meta data and logo

--- a/hosting/index.html
+++ b/hosting/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Renaldi Project - website for add and storing patient health treatment data." />
+    <meta name="keywords" content="Renaldi Project, healthcare, project" />
+    <meta name="author" content="Renaldi Prasetyo Basuki" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Renaldi Project" />
+    <meta property="og:description" content="Renaldi Project - website for add and storing patient health treatment data." />
+    <meta property="og:image" content="/healthcare.png" />
+    <link rel="icon" type="image/svg+xml" href="/healthcare.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Renaldi Project</title>
   </head>
   <body>
     <div id="root"></div>
